Fixing gap missions and card focus

--- a/app/components/Missisons/missions.module.scss
+++ b/app/components/Missisons/missions.module.scss
@@ -31,8 +31,6 @@
                 transparent
                 );
         }
-        
-        
     }
 
     p {
@@ -46,11 +44,11 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 30;
+        gap: 30px;
         .cards1 {
             display: flex;
             flex-direction: column;
-            gap: 30;
+            gap: 30px;
             video {
                 width: 100%;
                 object-fit: cover;
@@ -58,7 +56,7 @@
             .cards2 {  
                 display: flex;
                 flex-direction: column;             
-                gap: 30;
+                gap: 30px;
                 .card { 
                     width: 100%;                    
                 }
@@ -67,7 +65,7 @@
         .cards3 {
             display: flex;
             flex-direction: column;
-            gap: 30;
+            gap: 30px;
         }
 
 
@@ -158,26 +156,25 @@
 
     .card_focus_container{
         position: absolute;
-        display: grid;
-        place-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         inset: 0;
         overflow: hidden;
         z-index: 10;
-        
         background-color: rgba($background-color, .6);
         backdrop-filter: blur(6px);
 
         .card_focus {
             position: relative;
-            height: auto;
-            margin: auto;
+            height: max-content;
             background-color: rgba($background-color, 0.8);
             backdrop-filter: blur(4px);
             border: solid 1px rgba($foreground-color, .04);
             border-radius: 4px;
             img {
                 width: 100%;
-                height: 25%;
+                height: 45%;
                 border-radius: 4px 4px 0 0;
                 object-fit: cover;
             }
@@ -232,7 +229,7 @@
                 }
 
                 .tecnologies {
-                    margin-top: 20px;
+                    margin-block: 20px;
                     margin-inline: auto;
                     padding: 0;
                     justify-content: center;
@@ -254,26 +251,99 @@
 
 @media (min-width: 713px) {
     .missions {
-        .card_focus_container{   
-            .card_focus {    
-                video {
-                    height: 350px;
+        .card_focus_container{
+            position: absolute;
+            display: grid;
+            place-content: center;
+            inset: 0;
+            overflow: hidden;
+            z-index: 10;
+            
+            background-color: rgba($background-color, .6);
+            backdrop-filter: blur(6px);
+    
+            .card_focus {
+                position: relative;
+                height: auto;
+                margin: auto;
+                background-color: rgba($background-color, 0.8);
+                backdrop-filter: blur(4px);
+                border: solid 1px rgba($foreground-color, .04);
+                border-radius: 4px;
+                img {
+                    width: 100%;
+                    height: 25%;
+                    border-radius: 4px 4px 0 0;
+                    object-fit: cover;
                 }
-
-                .card_description{    
-                    
+    
+                video {
+                    width: 100%;
+                    height: 350px;
+                    object-fit: cover;
+                }
+    
+                .card_description{
+                    padding: 22px;
+    
+                    div {
+                        display: flex;
+                        align-items: center;
+                        padding-inline: 15px;                    
+    
+                        span {
+                            font-size: 7px;
+                            margin: 0;
+                            padding: 0;
+                        }
+                        p {
+                            margin: 0;
+                            padding-left: 5px;
+                            opacity: 70%;
+                            font-weight: 400;
+                            font-size: 12px;
+                            width: max-content;
+                        }
+                    }
     
                     article {
                         max-width: 490px;
-                                         
+                        font-size: 15px;
+                        margin: auto;
+                        text-align: justify;
+                        margin-top: 20px;
+                        padding-inline: 5px;                    
+                    }
+    
+                    button {
+                        position: absolute;
+                        top: 4px;
+                        right: 4px;
+                        padding: 7px 10px;
+                        border-radius: 50%;
+                        border: none;
+                        background-color: rgba($principal-color, .8);
+                        color: white;
+                        cursor: pointer;
                     }
     
                     .tecnologies {
+                        margin-top: 20px;
+                        margin-inline: auto;
+                        padding: 0;
+                        justify-content: center;
+                        flex-wrap: wrap;
                         max-width: 500px;
-                        
+                        mark {
+                            margin: 5px 10px;
+                            background-color: transparent;
+                            border: solid 1px rgba($principal-color, .8);
+                        }
                     }
                 }
+    
             }
+    
         }
     }
 
