--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -71,7 +71,7 @@ a {
 
 p{
   font-weight: bold;
-  font-family: 'ROBOTO MONO', monospace;
+  font-family: var(--font-roboto-mono);
 }
 
 mark {
